fix right side element spacing

--- a/assets/css/src/_grid-flex.scss
+++ b/assets/css/src/_grid-flex.scss
@@ -64,11 +64,11 @@
 		padding: 2rem;
 
 		@media all and (min-width: 980px) {
-			padding: 2.75rem 4rem 2.75rem 4.5rem;
+			padding: 2.75rem 4.5rem;
 		}
 
 		@media all and (min-width: 1400px) {
-			padding: 3.5rem 4rem 3.5rem 4.5rem;
+			padding: 3.5rem 4.5rem;
 		}
 
 		.grid-item-content {
